--- a/Makefile.simple
+++ b/Makefile.simple
@@ -30,7 +30,7 @@
 
 CFLAGS = -I. -Wall -g
 
-PROGRAMS = modhex yubikey-debug selftest
+PROGRAMS = modhex ykdebug selftest
 
 all: $(PROGRAMS)
 
@@ -44,4 +44,4 @@ check: all
 
 zip:
 	zip yubico-sdk-`date +%Y-%m-%d` \
-		COPYING README Makefile.simple yubikey.h yubikey.c selftest.c modhex.c yubikey-debug.c 
+		COPYING README Makefile.simple yubikey.h yubikey.c selftest.c modhex.c ykdebug.c 
