Use -export-symbols-regex.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,7 @@
 lib_LTLIBRARIES = libyubikey.la
 libyubikey_la_SOURCES = yubikey.h yubikey.c
 libyubikey_la_LDFLAGS = -no-undefined \
+	-export-symbols-regex '^yubikey_.*' \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 # The command line tools.
