Fix release target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,11 +63,17 @@ EXTRA_DIST = simple.mk
 ChangeLog:
 	svn2cl
 
+PROJECT=yubico-c
+
 release:
 	rm -f ChangeLog
 	make ChangeLog distcheck
-	svn copy https://yubico-c.googlecode.com/svn/trunk/ \
-	 https://yubico-c.googlecode.com/svn/tags/$(PACKAGE)-$(VERSION) \
+	gpg -b $(PACKAGE)-$(VERSION).tar.gz
+	gpg --verify $(PACKAGE)-$(VERSION).tar.gz.sig
+	svn copy https://$(PROJECT).googlecode.com/svn/trunk/ \
+	 https://$(PROJECT).googlecode.com/svn/tags/$(PACKAGE)-$(VERSION) \
 	 -m "Tagging the $(VERSION) release of the $(PACKAGE) project."
-	googlecode_upload.py -s "Yubico C library v$(VERSION)." \
-	 -p yubico-c -u simon75j $(PACKAGE)-$(VERSION).tar.gz 
+	googlecode_upload.py -s "OpenPGP signature for $(PACKAGE) $(VERSION)." \
+	 -p $(PROJECT) -u simon75j $(PACKAGE)-$(VERSION).tar.gz.sig
+	googlecode_upload.py -s "$(PACKAGE) $(VERSION)" \
+	 -p $(PROJECT) -u simon75j $(PACKAGE)-$(VERSION).tar.gz 
