--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,9 @@ AC_PROG_CC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
+m4_pattern_allow([AM_PROG_AR])
+AM_PROG_AR
+
 gl_LD_VERSION_SCRIPT
 
 AC_ARG_ENABLE([gcc-warnings],
