move around the AM_PROG_AR call to avoid warnings

--- a/configure.ac
+++ b/configure.ac
@@ -40,11 +40,13 @@ AC_SUBST(LT_AGE, 1)
 AM_INIT_AUTOMAKE([1.10 -Wall -Werror])
 AM_SILENT_RULES([yes])
 AC_PROG_CC
-AC_LIBTOOL_WIN32_DLL
-AC_PROG_LIBTOOL
 
+# workaround for automake 1.12
 m4_pattern_allow([AM_PROG_AR])
 AM_PROG_AR
+
+AC_LIBTOOL_WIN32_DLL
+AC_PROG_LIBTOOL
 
 gl_LD_VERSION_SCRIPT
 
