--- a/Makefile.am
+++ b/Makefile.am
@@ -71,12 +71,16 @@ ChangeLog:
 PROJECT = yubico-c
 
 release:
-	@if test -z "$(USER)" || test -z "$(KEYID)"; then \
+	@if test -z "$(KEYID)"; then \
 		echo "Try this instead:"; \
-		echo "  make release USER=[GOOGLEUSERNAME] KEYID=[PGPKEYID]"; \
+		echo "  make release KEYID=[PGPKEYID]"; \
 		echo "For example:"; \
-		echo "  make release USER=simonyubico@gmail.com KEYID=2117364A"; \
-		echo "  make release USER=fredrikyubico@gmail.com KEYID=4EAA4232"; \
+		echo "  make release KEYID=2117364A"; \
+		exit 1; \
+	fi
+	@if test ! -d $(YUBICO_GITHUB_REPO); then \
+		echo "yubico.github.com repo not found!"; \
+		echo "Make sure that YUBICO_GITHUB_REPO is set"; \
 		exit 1; \
 	fi
 	@head -3 $(srcdir)/NEWS | grep -q "Version $(VERSION) .released `date -I`" || \
@@ -88,13 +92,22 @@ release:
 	cd $(srcdir) && git push
 	cd $(srcdir) && git tag -u $(KEYID)! -m $(VERSION) $(PACKAGE)-$(VERSION)
 	cd $(srcdir) && git push --tags
-	mkdir -p ../releases/$(PACKAGE)/ && \
-		cp -v $(PACKAGE)-$(VERSION).tar.gz* ../releases/$(PACKAGE)/
-	googlecode_upload.py -s "OpenPGP signature for $(PACKAGE) $(VERSION)." \
-	 -p $(PROJECT) -u $(USER) $(PACKAGE)-$(VERSION).tar.gz.sig
-	googlecode_upload.py -s "$(PACKAGE) $(VERSION)" \
-	 -p $(PROJECT) -u $(USER) $(PACKAGE)-$(VERSION).tar.gz
-	test -d ../wiki-$(PROJECT) && \
+	mkdir -p $(YUBICO_GITHUB_REPO)/$(PROJECT)/releases
+	cp -v $(PACKAGE)-$(VERSION).tar.gz* \
+		$(YUBICO_GITHUB_REPO)/$(PROJECT)/releases/
+	cd $(YUBICO_GITHUB_REPO)/$(PROJECT) && \
+		x=$$(ls -1v releases/*.tar.gz \
+		| awk -F\- '{print $$2}' | sed 's/.tar.gz//' | paste -sd ',' - \
+		| sed 's/,/, /g' | sed 's/\([0-9.]\{1,\}\)/"\1"/g'); \
+		sed -i -e "2s/\[.*\]/[$$x]/" releases.html
+	cd $(YUBICO_GITHUB_REPO) && \
+		git add $(PROJECT)/releases/$(PACKAGE)-$(VERSION).tar.gz*
+	cd $(YUBICO_GITHUB_REPO) && git add $(PROJECT)/releases.html
+	cd $(YUBICO_GITHUB_REPO) && git commit -m "$(PACKAGE)-$(VERSION)"
+	cd $(YUBICO_GITHUB_REPO) && git push
+	@if test -d $(srcdir)/../wiki-$(PROJECT); then \
+		cd $(srcdir) && \
 		cp README ../wiki-$(PROJECT)/ReadMe.wiki && \
 		cd ../wiki-$(PROJECT) && \
-		git commit -m Sync. ReadMe.wiki
+		git commit -m Sync. ReadMe.wiki; \
+	fi
