--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.lo
+*.o
 .deps
 .libs
 ChangeLog
@@ -6,6 +8,7 @@ Makefile
 Makefile.in
 TAGS
 aclocal.m4
+ar-lib
 autom4te.cache/
 build-aux/config.guess
 build-aux/config.sub
@@ -13,32 +16,32 @@ build-aux/depcomp
 build-aux/install-sh
 build-aux/ltmain.sh
 build-aux/missing
+compile
+config.guess
 config.log
 config.status
+config.sub
 configure
+depcomp
+install-sh
 libtool
 libykpers-1.la
+libyubikey-*.tar.gz
+libyubikey-*.tar.gz.sig
+libyubikey.la
+ltmain.sh
 m4/libtool.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
+missing
+modhex
+test-driver
 tests/Makefile
 tests/Makefile.in
 tests/selftest
 tests/selftest.o
 tmp/
-config.guess
-config.sub
-depcomp
-install-sh
-ltmain.sh
-missing
-*.o
-*.lo
-libyubikey.la
-modhex
 ykgenerate
 ykparse
-libyubikey-*.tar.gz
-libyubikey-*.tar.gz.sig
