Fix git ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -8,40 +8,35 @@ Makefile
 Makefile.in
 TAGS
 aclocal.m4
-ar-lib
 autom4te.cache/
+build-aux/ar-lib
+build-aux/compile
 build-aux/config.guess
 build-aux/config.sub
 build-aux/depcomp
 build-aux/install-sh
 build-aux/ltmain.sh
 build-aux/missing
-compile
-config.guess
+build-aux/test-driver
 config.log
 config.status
-config.sub
 configure
-depcomp
-install-sh
 libtool
-libykpers-1.la
 libyubikey-*.tar.gz
 libyubikey-*.tar.gz.sig
 libyubikey.la
-ltmain.sh
 m4/libtool.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
-missing
 modhex
-test-driver
 tests/Makefile
 tests/Makefile.in
 tests/selftest
+tests/selftest.log
 tests/selftest.o
-tmp/
+tests/selftest.trs
+tests/test-suite.log
 ykgenerate
 ykparse
