--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: c
 compiler:
   - gcc
   - clang
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq -y asciidoc
 script: autoreconf -i && ./configure && make check
