--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y asciidoc
+  - sudo apt-get install -qq -y --no-install-recommends asciidoc docbook-xml xsltproc libxml2-utils
 script: autoreconf -i && ./configure && make check
